--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,14 +7,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "express-validator": "^6.6.0",
     "moment": "^2.26.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
     "react-router-bootstrap": "^0.25.0",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.1.0",
     "react-widgets": "^4.5.0",
