--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-daterangepicker": "^3.1.0",
     "express-validator": "^6.6.0",
-    "moment": "^2.26.0",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.1",
     "react-router-bootstrap": "^0.25.0",
