--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "bootstrap-daterangepicker": "^3.1.0",
+    "dayjs": "^1.10.7",
     "express-validator": "^6.6.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
