--- a/Server/package.json
+++ b/Server/package.json
@@ -10,18 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "express-validator": "^6.10.1",
-    "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "sqlite3": "^5.0.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sqlite3": "^5.0.2"
   }
 }
