--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-session": "^1.17.2",
@@ -23,5 +24,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sqlite3": "^5.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13"
   }
 }
